manifests/keycloak/overlays/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: auth-gateway
  namespace: auth
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - login.os4ml.wogra.com
      port:
        name: http
        number: 80
        protocol: HTTP
      # Upgrade HTTP to HTTPS
      tls:
        httpsRedirect: false
    - hosts:
        - login.os4ml.wogra.com
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: keycloak-ingress-cert
