manifests/keycloak/overlays/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: auth
  namespace: auth
  labels:
    app: auth
spec:
  gateways:
    - kubeflow/kubeflow-gateway
  hosts:
    - '*'
  http:
    - name: "keycloak-route"
      match:
        - uri:
            prefix: /keycloak/
      rewrite:
        uri: /
      route:
        - destination:
            host: keycloak.auth.svc.cluster.local
            port:
              number: 8080
    - name: "keycloak-admin-route"
      match:
        - uri:
            prefix: /admin/
        - uri:
            prefix: /resources/
        - uri:
            prefix: /realms/
      route:
        - destination:
            host: keycloak.auth.svc.cluster.local
            port:
              number: 8080
